--- a/www/index.html
+++ b/www/index.html
@@ -1,73 +1,88 @@
 <!DOCTYPE html>
+<!--
+    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
+
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+     KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+-->
 <html>
+
 <head>
-    <title>Currency Converter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="assets/helpers/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <!-- Good default declaration:
+    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+        * Enable inline JS: add 'unsafe-inline' to default-src
+        * Enable eval(): add 'unsafe-eval' to default-src
+    * Create your own at http://cspisawesome.com
+    -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-    <link href="assets/css/app.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Currency</title>
 </head>
-<body onload=" ConvertCurrency();">
 
+<body >
+<center>
+        <h2>Currency </h2>
 
-    <header><h3>Currency Converter</h3></header>
+        <div>
 
-<section id="wrapper" class="container">
-    <form id="convert" role="form">
-
-        <div class="form-group">
-            <input id="fromAmount" type="number" data-type="number" class="form-control"  placeholder="Enter amount to convert" value="1" onkeyup="ConvertCurrency();" />
-        </div>
-
-        <div class="form-group">
-            <select name="from" id="from" class="form-control">
+            <!--user input the amount he wants to convert-->
+            <p>Input the Amount in Dolar:</p>
+            <input id="inputMoney" type="text" placeholder="0">
+            <!--input which currency-->
+            <br>
+            <select name="to" id="convertFrom">
                 <option value="">Convert From</option>
+                <option value="BRL">BRL - Brazil Real</option>
+                <option value="EUR">EUR - Euro Member Countries</option>
+                <option value="GBP">GBP - United Kingdom Pound</option>
                 <option value="USD">USD - United States Dollar</option>
-
             </select>
-        </div>
-
-
-        <div class="form-group">
-            <select name="to" id="to" class="form-control">
+            <br>
+            <select name="to" id="convertTo">
                 <option value="">Convert To</option>
                 <option value="BRL">BRL - Brazil Real</option>
                 <option value="EUR">EUR - Euro Member Countries</option>
                 <option value="GBP">GBP - United Kingdom Pound</option>
                 <option value="USD">USD - United States Dollar</option>
-
             </select>
+
+            <br>
+            <button onclick="callAPI()">Convert</button>
+            <!--show the result-->
+            <p>Result:</p>
+            <p id="displayData"></p>
+
         </div>
-
-        <div class="form-group">
-            <input id="submit" type="submit" class="btn btn-primary btn-block" value="Convert" />
-        </div>
-
-
-    </form>
-
-
-    <div id="result">
-
-
-    </div>
-
-</section>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="assets/helpers/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/app.js"></script>
+    <div><img src="currency.png" alt="Girl in a jacket" style="width:150px;height:160px;"></div>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+</center>
 </body>
+
 </html>
